# rovo

./: Cargo.toml  README.md  valgrind-out.txt
src/: autogradmeta.rs  binary_ops.rs  lib.rs  ndarry_ext.rs  ops.rs  tensor_ops.rs  util.rs  util_autograd.rs  variable.rs
src/aten/: cpu_type.rs  dispatch.rs  expand_utils.rs  functions.rs  infer_size.rs  memory_overlap.rs  mod.rs  numeric_utils.rs  parallel.rs  scalar_ops.rs  tensor_utils.rs  typedefault.rs  util.rs
src/aten/core/: mod.rs  tensor_accessor.rs
src/aten/native/: binary_ops.rs  copy.rs  cpublas.rs  dispatch_stub.rs  distribution_templates.rs  fill.rs  linear_algebra.rs  loops.rs  lossNLL.rs  mod.rs  reduce_ops.rs  reduce_ops_utils.rs  resize.rs  shared_reduce_ops.rs  softmax.rs  tensor_compare.rs  tensor_conversions.rs  tensor_factories.rs  tensor_properties.rs  tensor_shape.rs  unary_ops.rs
src/autograd/: autogradmeta.rs  backward.rs  mod.rs  saved_variable.rs  variable_factories.rs
src/c10/: mod.rs
src/c10/core_/: allocator.rs  cpu_allocator.rs  device_type.rs  layout.rs  memory_format.rs  mod.rs  scalar.rs  scalar_type.rs  storage.rs  tensor_options.rs  (+2 more)
src/core/: context.rs  distribution_helper.rs  grad_mode.rs  mod.rs  transformation_helper.rs
src/engine/: engine.rs  mod.rs  task.rs
src/nn/: functional.rs  init.rs  linear.rs  mod.rs  module.rs
src/ops/: graph_ops.rs  graphroot.rs  mod.rs  ops.rs  ops_orig.rs
src/optim/: mod.rs
src/rsrc/: mod.rs
src/tensor/: linear_algebra.rs  loss.rs  mod.rs  tensor.rs  tensor_.rs  tensor_impl.rs  tensor_iterator.rs  tensor_oprators.rs  tensor_ops.rs  tensor_options.rs  tensor_shape.rs  tensor_util.rs
src/util/: bitset.rs  index_generator.rs  mod.rs  ordered_dict.rs  vec256.rs
tests/: autograd.rs  basic.rs  dispatch_test.rs  functional.rs  mnist_test.rs  module.rs  tensor_ops.rs  vec256.rs
(+29 files in other folders)
