[package]
name = "rovo"
version = "0.1.0"
authors = ["Darshan Kathiriya <darshankathiriya121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.79"
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
num = "0.3"
num-traits = "0.2"
dyn-clone = "1.0.2"
reduce = "0.1"
smallvec = "1.4.1"
once_cell = "1.4.1"
lazy_static = "1.4.0"

# see more at: https://github.com/rust-lang/rust/pull/38699
[profile.dev]
opt-level = 1


[lib]
# proc-macro = true
