[package]
name = "rovo"
version = "0.1.0"
authors = ["Darshan Kathiriya <darshankathiriya121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.79"
blas-sys = "0.7.1"
blas-src = {version= "0.7.0", features = ["accelerate"]}
num = "0.3"
smallvec = "1.4.1"
once_cell = "1.4.1"
crossbeam = "0.8.0"
rayon = "1.5.0"
# bit-set = "0.5.2"

[dev-dependencies]
flate2 = "1.0.19"
byteorder = "1.3.4"

# see more at: https://github.com/rust-lang/rust/pull/38699
[profile.dev]
opt-level = 1


[lib]
# proc-macro = true
